<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EyeTab</string>
    <string name="accessibility_service_label">EyeTab 제스처 서비스</string>
    <string name="accessibility_service_description">눈 깜빡임으로 탭과 스크롤 제스처를 수행하는 접근성 서비스입니다.</string>
    <string name="status_granted">✓ 허용됨</string>
    <string name="status_needed">✗ 필요</string>
    <string name="btn_request_camera">1. 카메라 권한 요청</string>
    <string name="btn_open_overlay">2. 오버레이 권한 설정 열기</string>
    <string name="btn_open_accessibility">3. 접근성 서비스 설정 열기</string>
    <string name="permission_camera">카메라 권한</string>
    <string name="permission_overlay">오버레이 권한</string>
    <string name="permission_accessibility">접근성 서비스</string>
    <string name="btn_start">▶ 추적 시작</string>
    <string name="btn_stop">■ 추적 중지</string>
    <string name="notif_title">EyeTab 추적 중</string>
    <string name="notif_text">얼굴 추적 활성화됨</string>
    <string name="notif_channel">EyeTab 추적</string>
</resources>
